--- a/tool-minigame/index.html
+++ b/tool-minigame/index.html
@@ -4,9 +4,9 @@
   <meta charset='utf-8'/>
   <meta name='viewport' content='width=device-width, initial-scale=1.0'/>
 
-  <title>미니게임 분석기 | 동행 파워볼·파워볼+·키노사다리 EV·마진·공정배당</title>
-  <meta name='description' content='동행 파워볼/파워볼+ · 동행 키노사다리 · 동행 스피드키노사다리의 배당(사용자 입력) 기준으로 암시확률, 오버라운드(마진), 공정확률/공정배당, EV(기대값)를 한 번에 계산합니다. 최근 결과 붙여넣기로 빈도 기반 확률도 계산할 수 있습니다.'/>
-  <meta name='keywords' content='미니게임 분석기, 동행 파워볼 분석기, 동행 파워볼+ 분석기, 키노사다리 분석기, 스피드키노사다리 분석기, 파워볼 홀짝, 파워볼 언더오버, 대중소, 오버라운드, 마진 계산기, 공정배당, EV 계산기'/>
+  <title>미니게임 분석기 | 파워볼+·키노사다리 EV·마진·공정배당</title>
+  <meta name='description' content='동행 파워볼+ · 동행 키노사다리 · 동행 스피드키노사다리의 배당(사용자 입력) 기준으로 암시확률, 오버라운드(마진), 공정확률/공정배당, EV(기대값)를 한 번에 계산합니다. 최근 결과 붙여넣기로 빈도 기반 확률도 계산할 수 있습니다.'/>
+  <meta name='keywords' content='미니게임 분석기, 동행 파워볼+ 분석기, 키노사다리 분석기, 스피드키노사다리 분석기, 파워볼 홀짝, 파워볼 언더오버, 대중소, 오버라운드, 마진 계산기, 공정배당, EV 계산기'/>
   <meta name='robots' content='index,follow'/>
   <link rel='canonical' href='https://88st.cloud/tool-minigame/'/>
 
@@ -71,7 +71,7 @@
         </div>
 
         <div class='mg-note' style='margin-top:10px;'>
-          <b>배당</b>은 사이트에서 제공되는 값을 그대로 입력하세요. <b>내 확률(%)</b>은 선택(빈칸 가능)입니다.
+          <b>배당</b>은 사이트에서 제공되는 값을 그대로 입력하세요. <b>최근 확률(%)</b>은 선택(빈칸 가능)입니다.
         </div>
 
         <div style='margin-top:10px; overflow:auto;'>
@@ -80,7 +80,7 @@
               <tr>
                 <th style='width:120px;'>선택</th>
                 <th style='width:120px;'>배당</th>
-                <th style='width:150px;'>내 확률(%)</th>
+                <th style='width:150px;'>최근 확률(%)</th>
                 <th>비고</th>
               </tr>
             </thead>
@@ -122,7 +122,7 @@
           <div class='mg-k'><div class='t'>암시확률 합</div><div class='v' id='mgSumP'>—</div><div class='s'>Σ(1/배당)</div></div>
           <div class='mg-k'><div class='t'>마진(오버라운드)</div><div class='v' id='mgMargin'>—</div><div class='s'>Σ-1</div></div>
           <div class='mg-k'><div class='t'>입력 표본</div><div class='v' id='mgN'>—</div><div class='s'>히스토리 건수</div></div>
-          <div class='mg-k'><div class='t'>EV 기준</div><div class='v' id='mgMode'>—</div><div class='s'>내 확률</div></div>
+          <div class='mg-k'><div class='t'>EV 기준</div><div class='v' id='mgMode'>—</div><div class='s'>최근 결과 기반</div></div>
         </div>
 
         <div class='mg-divider'></div>
