--- a/analysis/index.html
+++ b/analysis/index.html
@@ -1801,6 +1801,7 @@ a{ color:inherit; }
 <!-- ===== 메인 시장 ===== -->
 <div class="box" id="mainBox">
 <div class="box-title" id="mainMarketTitle">메인 배당</div>
+<div class="st-point" id="mainPoint"></div>
 <!-- 2-way -->
 <div id="main2" style="display:none;">
 <div class="grid">
@@ -2846,11 +2847,74 @@ function onSportChange(silent){
 
 function onLevelChange(silent){
   const level = val("level");
-  $("valueInputs").style.display = (level === "simple") ? "none" : "block";
-  $("handicapBox").style.display = (level === "simple") ? "none" : "block";
-  $("totalBox").style.display = (level === "simple") ? "none" : "block";
+  const isSimple = (level === "simple");
+  const isAdv = (level === "adv");
 
+  // Core visibility
+  $("valueInputs").style.display = isSimple ? "none" : "block";
+  $("totalBox").style.display = isSimple ? "none" : "block";
+  $("handicapBox").style.display = isSimple ? "none" : "block";
+
+  // Advanced-only: 라인 비교(고급 전용으로 정리)
+  const lc = document.getElementById("lineCompareBox");
+  if(lc) lc.style.display = isAdv ? "block" : "none";
+
+  // Tabbar: 레벨에 맞게 탭 자체도 숨김
+  const tabbar = document.getElementById("appTabbar");
+  if(tabbar){
+    const map = {
+      main: true,
+      total: !isSimple,
+      handicap: !isSimple,
+      result: true,
+      history: true
+    };
+    tabbar.querySelectorAll(".st-tab").forEach(btn=>{
+      const key = btn.getAttribute("data-jump");
+      const show = map[key] !== false;
+      btn.style.display = show ? "" : "none";
+      if(!show && btn.classList.contains("on")){
+        // 강제로 메인 탭으로 복귀
+        const mainBtn = tabbar.querySelector('.st-tab[data-jump="main"]');
+        if(mainBtn) mainBtn.click();
+      }
+    });
+  }
+
+  // Paste: 간단 모드에서는 '여러 경기 만들기' 숨김(초보 혼란 방지)
+  const pasteBox = document.getElementById("pasteBox");
+  if(pasteBox){
+    const multiBtn = [...pasteBox.querySelectorAll("button")].find(b=> (b.textContent||"").includes("여러 경기"));
+    if(multiBtn) multiBtn.style.display = isSimple ? "none" : "";
+  }
+
+  // 핵심 포인트(회색 박스) 텍스트
   const cfg = SPORT_CFG[val("sport")] || SPORT_CFG.soccer;
+
+  const levelPoint = document.getElementById("levelPoint");
+  if(levelPoint){
+    if(isSimple){
+      levelPoint.innerHTML = `<span class="k">간단</span> <b>메인 배당만</b> 넣고 마진/공정확률을 빠르게 확인합니다. (OU/핸디/EV 입력은 숨김)`;
+    }else if(level === "mid"){
+      levelPoint.innerHTML = `<span class="k">중급</span> 메인 + <b>OU/핸디(선택)</b>까지 같이 계산합니다. <b>내확률</b>을 넣으면 EV/권장비중도 함께 봅니다.`;
+    }else{
+      levelPoint.innerHTML = `<span class="k">고급</span> 라인 비교/확률 입력/EV/켈리까지 <b>전체 기능</b>을 모두 사용합니다.`;
+    }
+  }
+
+  const mp = document.getElementById("mainPoint");
+  if(mp){
+    mp.innerHTML = `<span class="k">필수</span> 배당만 정확히 입력하면 됩니다. <b>오버라운드(마진)</b>가 낮을수록 비용이 낮은 편입니다.`;
+  }
+  const tp = document.getElementById("totalPoint");
+  if(tp){
+    tp.innerHTML = `<span class="k">선택</span> 오버/언더 배당을 넣으면 <b>OU 마진</b>과 공정확률을 따로 계산합니다.`;
+  }
+  const hp = document.getElementById("handicapPoint");
+  if(hp){
+    hp.innerHTML = `<span class="k">선택</span> 핸디 라인/양쪽 배당 입력 시 <b>핸디 마진</b>과 공정확률을 확인합니다.`;
+  }
+
   updateMyProbHints(cfg, level);
   applyTemplate();
 
