--- a/tool-minigame/index.html
+++ b/tool-minigame/index.html
@@ -19,11 +19,11 @@
   <link rel='icon' href='/favicon.ico' type='image/x-icon'/>
   <link rel='shortcut icon' href='/favicon.ico' type='image/x-icon'/>
 
-  <link rel='stylesheet' href='/assets/88st-theme.css?v=20260212_VIP3'/>
-  <link rel='stylesheet' href='/assets/88st-minigame-analyzer.css?v=20260212_VIP3_mg1'/>
-  <link rel='stylesheet' href='/assets/88st-shell.css?v=20260212_VIP3'/>
-  <script defer src='/assets/js/88st-shell.js?v=20260212_VIP3'></script>
-  <script defer src='/assets/js/88st-minigame-analyzer.js?v=20260212_VIP3_mg1'></script>
+  <link rel='stylesheet' href='/assets/88st-theme.css?v=20260213_VIP4'/>
+  <link rel='stylesheet' href='/assets/88st-minigame-analyzer.css?v=20260213_VIP4_mg2'/>
+  <link rel='stylesheet' href='/assets/88st-shell.css?v=20260213_VIP4'/>
+  <script defer src='/assets/js/88st-shell.js?v=20260213_VIP4'></script>
+  <script defer src='/assets/js/88st-minigame-analyzer.js?v=20260213_VIP4_mg2'></script>
 
   <!-- GA4 (main stream) -->
   <script>
@@ -160,5 +160,23 @@
       </section>
     </div>
   </main>
+
+<script>
+  // mgFallbackReload: if analyzer didn't render tabs (cache/script race), reload analyzer once.
+  document.addEventListener('DOMContentLoaded', function(){
+    setTimeout(function(){
+      try{
+        var host = document.getElementById('mgGameTabs');
+        if(host && host.children && host.children.length === 0){
+          var s = document.createElement('script');
+          s.src = '/assets/js/88st-minigame-analyzer.js?v=20260213_VIP4_mg2';
+          s.defer = true;
+          document.body.appendChild(s);
+        }
+      }catch(e){}
+    }, 350);
+  });
+</script>
+
 </body>
 </html>
