--- a/index.html
+++ b/index.html
@@ -1742,7 +1742,10 @@ body::after{
       if(!histList) return;
       const arr = loadHist();
       if(!arr.length){
-        histList.innerHTML = '<div class="text" style="color:var(--muted);font-size:12px;">저장된 메모가 없습니다.</div>';
+        histList.innerHTML = '
+</head>
+<body>
+<div class="text" style="color:var(--muted);font-size:12px;">저장된 메모가 없습니다.</div>';
         return;
       }
       histList.innerHTML = arr.map((it, idx)=>{
