--- a/tool-minigame/index.html
+++ b/tool-minigame/index.html
@@ -19,18 +19,18 @@
   <link rel='icon' href='/favicon.ico' type='image/x-icon'/>
   <link rel='shortcut icon' href='/favicon.ico' type='image/x-icon'/>
 
-  <link rel='stylesheet' href='/assets/88st-theme.css?v=20260213_VIP4'/>
-  <link rel='stylesheet' href='/assets/88st-minigame-analyzer.css?v=20260213_VIP4_mg3'/>
-  <link rel='stylesheet' href='/assets/88st-shell.css?v=20260213_VIP4'/>
-  <script defer src='/assets/js/88st-shell.js?v=20260213_VIP4'></script>
-  <script defer src='/assets/js/88st-minigame-analyzer.js?v=20260213_VIP4_mg3'></script>
+  <link rel='stylesheet' href='/assets/88st-theme.css?v=VIP4_20260213_02'/>
+  <link rel='stylesheet' href='/assets/88st-minigame-analyzer.css?v=VIP4_20260213_02'/>
+  <link rel='stylesheet' href='/assets/88st-shell.css?v=VIP4_20260213_02'/>
+  <script defer src='/assets/js/88st-shell.js?v=VIP4_20260213_02'></script>
+  <script defer src='/assets/js/88st-minigame-analyzer.js?v=VIP4_20260213_02'></script>
 
   <!-- GA4 (main stream) -->
   <script>
     window.SITE_CONFIG = window.SITE_CONFIG || {};
     window.SITE_CONFIG.GA4_ID = 'G-22QKSP9VGB';
   </script>
-  <script defer src='/assets/js/88st-analytics.js'></script>
+  <script defer src='/assets/js/88st-analytics.js?v=VIP4_20260213_02'></script>
 
   <script type='application/ld+json'>
   {
@@ -192,7 +192,7 @@
     </div>
   </main>
 
-<script src="/assets/js/88st-minigame-analyzer.js?v=20260213_VIP4_mgPRO1" defer></script>
+<script src="/assets/js/88st-minigame-analyzer.js?v=VIP4_20260213_02" defer></script>
 <script>
   // mgFallbackReload: if analyzer didn't render tabs (cache/script race), reload analyzer once.
   document.addEventListener('DOMContentLoaded', function(){
@@ -201,7 +201,7 @@
         var host = document.getElementById('mgGameTabs');
         if(host && host.children && host.children.length === 0){
           var s = document.createElement('script');
-          s.src = '/assets/js/88st-minigame-analyzer.js?v=20260213_VIP4_mg3';
+          s.src = '/assets/js/88st-minigame-analyzer.js?v=VIP4_20260213_02';
           s.defer = true;
           document.body.appendChild(s);
         }
