--- a/index.html
+++ b/index.html
@@ -1661,6 +1661,10 @@ body::after{
 
 </style>
 
+</head>
+<body>
+
+
 
 <script>
 /* ===== logo shadow preset (2단계) + quick memo ===== */
@@ -1742,10 +1746,7 @@ body::after{
       if(!histList) return;
       const arr = loadHist();
       if(!arr.length){
-        histList.innerHTML = '
-</head>
-<body>
-<div class="text" style="color:var(--muted);font-size:12px;">저장된 메모가 없습니다.</div>';
+        histList.innerHTML = '<div class="text" style="color:var(--muted);font-size:12px;">저장된 메모가 없습니다.</div>';
         return;
       }
       histList.innerHTML = arr.map((it, idx)=>{
