--- a/casino/index.html
+++ b/casino/index.html
@@ -45,6 +45,70 @@ body{margin:0;font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,syste
 .notice-bar{position:sticky;top:0;z-index:1600;background:linear-gradient(135deg,var(--gold),var(--gold2));
   color:#000;font-weight:900;font-size:13px;padding:10px 12px;text-align:center;box-shadow:0 10px 30px rgba(0,0,0,.35);}
 .notice-bar a{color:#000;text-decoration:none}
+#loader{position:fixed;inset:0;z-index:2000;background:
+  radial-gradient(900px 500px at 50% 30%, rgba(var(--accentRGB),.18), transparent 55%),
+  linear-gradient(180deg,#07070a,#0b0b0b);
+  display:flex;align-items:center;justify-content:center;flex-direction:column;gap:14px;}
+#loader .logoWrap{width:min(220px,60vw);aspect-ratio:1/1;display:flex;align-items:center;justify-content:center;
+  filter: drop-shadow(0 0 24px rgba(var(--accentRGB),.22));}
+#loader img{width:100%;height:100%;object-fit:contain;animation:pulse 1.4s ease-in-out infinite;}
+#loader .text{font-weight:900;letter-spacing:.6px;color:#e9e9e9;opacity:.85;font-size:13px;}
+@keyframes pulse{0%{transform:scale(1);opacity:.85}50%{transform:scale(1.03);opacity:1}100%{transform:scale(1);opacity:.85}}
+#loader.hide{opacity:0;pointer-events:none;transition:opacity .35s ease;}
+.scam-popup{position:fixed;inset:0;background:rgba(0,0,0,.75);display:none;align-items:center;justify-content:center;z-index:3000;padding:18px;}
+.scam-box{background:rgba(17,17,17,.95);border:1px solid var(--bd);border-radius:18px;padding:22px;width:100%;max-width:380px;text-align:center;
+  box-shadow:0 18px 60px rgba(0,0,0,.75);backdrop-filter: blur(10px);}
+.scam-box h3{color:#ff6b6b;margin:0 0 10px;font-weight:900}
+.scam-box p{font-size:13px;color:#ddd;line-height:1.55;margin:0}
+.scam-box .btn{margin-top:12px;padding:12px;border-radius:12px;background:linear-gradient(135deg,var(--gold),var(--gold2));color:#000;font-weight:900;cursor:pointer;user-select:none;}
+.header{text-align:center;padding:18px 0 10px;}
+.nav{display:flex;gap:8px;justify-content:center;flex-wrap:wrap;padding:0 14px 12px;}
+.nav a{color:#ddd;text-decoration:none;font-weight:900;font-size:12px;border:1px solid var(--bd);background:rgba(0,0,0,.25);padding:8px 10px;border-radius:999px;}
+.nav a.active{background:linear-gradient(135deg,var(--gold),var(--gold2));color:#111;border-color:transparent;}
+.logoLink{display:inline-flex;align-items:center;justify-content:center;text-decoration:none;}
+.logoImg{width:min(220px,62vw);height:auto;display:block;padding:10px;border-radius:18px;background:radial-gradient(120px 60px at 50% 40%, rgba(var(--accentRGB),.15), transparent 70%);
+  filter: drop-shadow(0 0 10px rgba(var(--accentRGB),.25)) drop-shadow(0 0 24px rgba(var(--accentRGB),.12));}
+.sub{font-size:12px;color:#9a9a9a;margin-top:6px;padding:0 14px;line-height:1.5;}
+.wrap{max-width:1100px;margin:0 auto;padding:10px 14px 28px}
+.grid2{display:grid;grid-template-columns:1fr 1fr;gap:14px;}
+@media(max-width:900px){.grid2{grid-template-columns:1fr}}
+.card{background:var(--panel);border:1px solid var(--bd);border-radius:18px;padding:14px;box-shadow:0 10px 26px rgba(0,0,0,.45);backdrop-filter: blur(10px);}
+.title{font-weight:900;font-size:14px;color:var(--gold2);margin-bottom:8px}
+.badge{display:inline-block;padding:4px 8px;border-radius:999px;font-size:11px;font-weight:900;color:#000;background:linear-gradient(135deg,var(--gold),var(--gold2));margin-right:6px;}
+.text{color:var(--muted);font-size:13px;line-height:1.55}
+.list{margin:10px 0 0;padding-left:18px;color:var(--muted);font-size:13px;line-height:1.6}
+.callout{border:1px solid var(--bd);background:rgba(0,0,0,.28);border-radius:16px;padding:12px;margin-top:10px}
+.kv{display:flex;justify-content:space-between;gap:10px;padding:8px 0;border-bottom:1px solid rgba(255,255,255,.06);font-size:13px}
+.kv:last-child{border-bottom:none}
+.k{color:#cfcfcf}
+.v{font-weight:900}
+.ok{color:var(--ok)}
+.bad{color:var(--bad)}
+.btnRow{display:flex;gap:10px;flex-wrap:wrap;margin-top:10px}
+.btn{flex:1;min-width:160px;padding:12px;border-radius:14px;border:none;font-weight:900;cursor:pointer;text-decoration:none;text-align:center}
+.btn.gold{background:linear-gradient(135deg,var(--gold),var(--gold2));color:#111}
+.btn.blue{background:linear-gradient(135deg,#1da1f2,#78d6ff);color:#00121a}
+.btn.dark{background:#1f1f1f;color:var(--text);border:1px solid rgba(255,255,255,.08)}
+.faq details{border:1px solid rgba(255,255,255,.08);background:rgba(0,0,0,.28);border-radius:14px;padding:10px 12px}
+.faq details + details{margin-top:10px}
+.faq summary{cursor:pointer;font-weight:900;color:var(--text);list-style:none}
+.faq summary::-webkit-details-marker{display:none}
+.faq .a{margin-top:8px;color:#cfcfcf;font-size:13px;line-height:1.55}
+.footer{text-align:center;color:#9a9a9a;font-size:12px;padding:18px 14px 26px}
+small.muted{color:#9a9a9a}
+
+
+/* 88 logo spotlight */
+.logoImg, .logo-img{
+  width:min(170px,52vw) !important;
+  height:auto;
+  display:block;
+  padding:10px;
+  border-radius:20px;
+  background:rgba(20,20,24,var(--glassSoftA));
+  border:1px solid rgba(255,255,255,.12);
+  box-shadow:0 0 0 1px rgba(255,255,255,.06), 0 14px 40px rgba(0,0,0,.42), 0 0 26px rgba(var(--accentRGB), .22);
+}
 @media(max-width:480px){
   .logoImg, .logo-img{ width:min(150px,72vw) !important; padding:9px; }
 }
@@ -130,7 +194,160 @@ input:focus, select:focus, textarea:focus{
 /* links */
 a{ color:inherit; }
 </style>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BreadcrumbList",
+  "itemListElement": [
+    {
+      "@type": "ListItem",
+      "position": 1,
+      "name": "홈",
+      "item": "https://88st.cloud/"
+    },
+    {
+      "@type": "ListItem",
+      "position": 2,
+      "name": "카지노",
+      "item": "https://88st.cloud/casino/"
+    }
+  ]
+}
+</script>
+<script src="/assets/js/88st-analytics.js"></script>
+<link href="/assets/88st-theme.css?v=20260213_VIP4" rel="stylesheet"/>
+<link href="/assets/88st-tool-history.css?v=20260210_B5" rel="stylesheet"/>
+<script defer="" src="/assets/js/88st-history-hub.js?v=20260210_B5"></script>
+<link href="/assets/88st-shell.css?v=20260213_VIP4" rel="stylesheet"/>
+<script defer="" src="/assets/js/88st-shell.js?v=20260213_VIP4"></script>
+</head>
+<body>
+<div id="loader">
+<div class="logoWrap"><img alt="88 로고 로딩" class="logoImg" src="/img/logo.png"/></div>
+<div class="text">Loading...</div>
+</div>
+<div class="scam-popup" id="scamPopup">
+<div class="scam-box">
+<h3>⚠️ 사칭 주의 안내</h3>
+<p>
+      88 커뮤니티 공식 관리자 텔레그램은<br/>
+<b>@UZU59</b> 단 하나입니다.<br/><br/>
+      그 외 계정은 사칭일 수 있으니<br/>
+      반드시 주의해 주세요.
+    </p>
+<div class="btn" onclick="closeScam()">확인</div>
+</div>
+</div>
+<div class="header">
+<div class="nav">
+<a href="../">메인</a>
+<a href="/analysis/">분석기</a>
+<a href="../ipl/">입플/보너스</a>
+<a href="../minigame/">동행 미니게임</a>
+<a class="active" href="./">카지노</a>
+<a href="../slot/">슬롯</a>
+</div>
+<a aria-label="홈으로 이동" class="logoLink" href="../">
+<img alt="88 커뮤니티 로고" class="logoImg" src="/img/logo.png"/>
+</a>
+<div class="sub">
+<b>온라인 카지노</b> 입플/페이백/보너스 조건과 주의사항을 정리했습니다.<br/>
+<small class="muted">※ “이벤트 크기”보다 “정산/규정 투명성”이 장기 만족을 결정합니다.</small>
+</div>
+</div>
+<div class="wrap st-guide" role="main">
+<div class="card st-guide-hero">
+  <div class="st-guide-kicker">88ST.CLOUD · 가이드</div>
+  <h1 class="st-guide-title">카지노 가이드</h1>
+  <p class="st-guide-desc">입플/페이백/보너스 조건을 “규정/제한” 중심으로 빠르게 검증하는 방법을 정리했습니다.</p>
+  <div class="st-guide-actions">
+    <a class="btn primary" href="/analysis/">분석기</a>
+    <a class="btn secondary" href="/bonus-checklist/">입플 체크리스트</a>
+    <a class="btn ghost" href="https://t.me/UZU59" target="_blank" rel="noopener">문의</a>
+  </div>
+</div>
+<div class="grid2">
+<div class="card">
+<div class="title"><span class="badge">CHECK</span>카지노 보너스 체크리스트 (핵심 6)</div>
+<ul class="list">
+<li>라이브/슬롯 <b>게임별 롤링</b> 차이</li>
+<li>보너스 <b>최대 상한</b> 및 고액 제한</li>
+<li>환전 최소/최대/횟수 제한</li>
+<li>특정 제공사/테이블 <b>제한</b> 여부</li>
+<li>규정 위반 시 보너스 회수 조건</li>
+<li>문의/처리 기록(대응 속도)</li>
+</ul>
+<div class="callout text">
+<b>팁:</b> “페이백 %”보다 <b>정산 속도/제한 투명성</b>이 더 중요할 때가 많습니다.
+      </div>
+<div class="btnRow">
+<a class="btn blue" href="/analysis/">분석기(마진/EV)</a>
+<a class="btn gold" href="https://t.me/UZU59" rel="noopener" target="_blank">문의(텔레그램)</a>
+</div>
+</div>
+<div class="card">
+<div class="title"><span class="badge">PRO</span>고액 유저 기준 “검증 포인트”</div>
+<div class="callout">
+<div class="kv"><div class="k">정산 안정성</div><div class="v ok">최우선</div></div>
+<div class="kv"><div class="k">규정 투명(제한/상한/롤링)</div><div class="v ok">필수</div></div>
+<div class="kv"><div class="k">문의 대응(근거 제시 가능)</div><div class="v ok">필수</div></div>
+<div class="kv"><div class="k">과도한 제한/불명확 규정</div><div class="v bad">주의</div></div>
+</div>
+<div class="title" style="margin-top:12px;"><span class="badge">SAFE</span>주의 신호</div>
+<ul class="list">
+<li>문의처가 여러 개로 분산되어 있음</li>
+<li>규정을 “말로만” 안내하고 근거가 없음</li>
+<li>이벤트만 강조하고 제한은 숨김</li>
+</ul>
+</div>
+</div>
+<div class="card faq" style="margin-top:14px;">
+<div class="title"><span class="badge">FAQ</span>자주 묻는 질문 (카지노)</div>
+<details open="">
+<summary>카지노 보너스는 무조건 받는 게 이득인가요?</summary>
+<div class="a">아니요. <b>롤링/제한/환전조건</b>에 따라 체감 효율이 크게 달라집니다.</div>
+</details>
+<details>
+<summary>고액 유저는 무엇을 먼저 확인하나요?</summary>
+<div class="a"><b>정산 안정성</b>, 규정 투명성, 대응 속도를 우선 확인합니다.</div>
+</details>
+<details>
+<summary>공식 문의처는 어디인가요?</summary>
+<div class="a">공식 텔레그램은 <b>@UZU59</b> 단 하나입니다. 사칭 계정 주의하세요.</div>
+</details>
+<details>
+<summary>스포츠 분석기가 카지노에도 도움이 되나요?</summary>
+<div class="a">분석기는 배당/마진/EV에 최적화되어 있어 스포츠에 가장 유용합니다. 다만 “불리한 구조(수수료/마진)”를 이해하는 데는 도움 됩니다.</div>
+</details>
+</div>
+<div class="footer">© 88 Community · 안내/검증 정보는 운영 상황에 따라 변경될 수 있습니다.</div>
+</div>
+<script>
+function hideLoader(){
+  const l=document.getElementById("loader");
+  if(!l) return;
+  l.classList.add("hide");
+  setTimeout(()=>l.remove(),450);
+}
+window.addEventListener("load", hideLoader);
+setTimeout(hideLoader,2500);
 
+(function(){
+  const key="scam_popup_date";
+  const today=new Date().toISOString().slice(0,10);
+  if(localStorage.getItem(key)!==today){
+    const el=document.getElementById("scamPopup");
+    if(el) el.style.display="flex";
+  }
+})();
+function closeScam(){
+  const today=new Date().toISOString().slice(0,10);
+  localStorage.setItem("scam_popup_date",today);
+  const el=document.getElementById("scamPopup");
+  if(el) el.style.display="none";
+}
+
+</script>
 <section aria-label="관련 링크" class="rel-links">
 <h2>관련 링크</h2>
 <div class="rel-grid">
