--- a/index_fixed.html
+++ b/index_fixed.html
@@ -74,7 +74,36 @@ body[data-logo-shadow="presence"]{ --logo-shadow: var(--logo-shadow-presence); }
 }
 .notice-bar a{ color:#000; text-decoration:none; }
 
-/* loader removed */
+#loader{
+  position:fixed;
+  inset:0;
+  z-index:2000;
+  background:
+    radial-gradient(900px 500px at 50% 30%, rgb(var(--accentRGB) / .18), transparent 55%),
+    linear-gradient(180deg,#07070a,#0b0b0b);
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  flex-direction:column;
+  gap:14px;
+}
+#loader .logoWrap{
+  width:min(170px, 52vw);
+  aspect-ratio:1/1;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  filter: drop-shadow(0 0 24px rgb(var(--accentRGB) / .22));
+}
+#loader img{
+  width:100%;
+  height:100%;
+  object-fit:contain;
+  animation: pulse 1.4s ease-in-out infinite;
+}
+#loader .text{ font-weight:900; letter-spacing:.6px; color:#e9e9e9; opacity:.85; font-size:13px; }
+@keyframes pulse{ 0%{ transform:scale(1); opacity:.85; } 50%{ transform:scale(1.03); opacity:1; } 100%{ transform:scale(1); opacity:.85; } }
+#loader.hide{ opacity:0; pointer-events:none; transition: opacity .35s ease; }
 
 .scam-popup{
   position:fixed; inset:0; background:rgba(0,0,0,.75);
@@ -617,7 +646,7 @@ select.insight-select{
 
 @media (prefers-reduced-motion: reduce){
   *{ scroll-behavior:auto !important; }
-  .header .logoImg{ animation:none !important; }
+  .header .logoImg, #loader img{ animation:none !important; }
   .analyze-btn::before{ display:none !important; }
   .card, .analyze-btn, .v-chip{ transition:none !important; }
 }
@@ -1666,6 +1695,25 @@ body::after{
 
 </style>
 <script>
+/* === SAFE LOADER FAILSAFE (파서/런타임 에러 대비) === */
+(function(){
+  function hide(){
+    var l=document.getElementById("loader");
+    if(!l) return;
+    l.classList.add("hide");
+    setTimeout(function(){ try{ l.remove(); }catch(e){} }, 500);
+  }
+  // DOM만 준비돼도 닫기
+  document.addEventListener("DOMContentLoaded", function(){ setTimeout(hide, 350); });
+  // 네트워크가 막혀도 닫기
+  setTimeout(hide, 2800);
+  // 최종: load
+  window.addEventListener("load", hide);
+  // 스크립트 에러로 멈추는 케이스 대비
+  window.addEventListener("error", function(){ setTimeout(hide, 0); });
+})();
+</script>
+<script>
 /* ===== 카드 데이터 (card9 추가) ===== */
 const CARD_DATA = {
   card1:{ title:"어느날", code:"ST95", link:"http://oday-147.com", telegram:"UZU59",
@@ -1786,15 +1834,21 @@ const INSIGHTS_BY_SPORT = {
   ]
 }
 </script>
-<link href="assets/mobile-polish.css?v=VIP4_20260213_04" rel="stylesheet"/>
-<script src="/assets/js/88st-analytics.js?v=VIP4_20260213_04"></script>
-<link href="/assets/88st-theme.css?v=VIP4_20260213_04" rel="stylesheet"/>
-</meta><link href="/assets/88st-tool-history.css?v=VIP4_20260213_04" rel="stylesheet"/>
-<script defer="" src="/assets/js/88st-history-hub.js?v=VIP4_20260213_04"></script>
-<link href="/assets/88st-shell.css?v=VIP4_20260213_04" rel="stylesheet"/>
-<script defer="" src="/assets/js/88st-shell.js?v=VIP4_20260213_04"></script>
+<link href="assets/mobile-polish.css?v=2" rel="stylesheet"/>
+<script src="/assets/js/88st-analytics.js"></script>
+<link href="/assets/88st-theme.css?v=20260213_VIP4" rel="stylesheet"/>
+</meta><link href="/assets/88st-tool-history.css?v=20260210_B5" rel="stylesheet"/>
+<script defer="" src="/assets/js/88st-history-hub.js?v=20260210_B5"></script>
+<link href="/assets/88st-shell.css?v=20260213_VIP4" rel="stylesheet"/>
+<script defer="" src="/assets/js/88st-shell.js?v=20260213_VIP4"></script>
 </head>
 <body>
+<div aria-hidden="true" id="loader">
+<div class="logoWrap">
+<img alt="88 로고 로딩" src="img/logo.png"/>
+</div>
+<div class="text">Loading...</div>
+</div>
 <div aria-label="사칭 주의 안내" aria-modal="true" class="scam-popup" id="scamPopup" role="dialog">
 <div class="scam-box">
 <h3>⚠️ 사칭 주의 안내</h3>
