--- a/analysis/index.html
+++ b/analysis/index.html
@@ -1660,12 +1660,12 @@ body.simple .paste-inline .chk:not(.simple-only){display:none !important;}
   ]
 }
 </script>
-<script src="/assets/js/88st-analytics.js?v=VIP4_20260213_04"></script>
-<link href="/assets/88st-theme.css?v=VIP4_20260213_04" rel="stylesheet"/>
-<link href="/assets/88st-tool-history.css?v=VIP4_20260213_04" rel="stylesheet"/>
-<script defer="" src="/assets/js/88st-history-hub.js?v=VIP4_20260213_04"></script>
-<link href="/assets/88st-shell.css?v=VIP4_20260213_04" rel="stylesheet"/>
-<script defer="" src="/assets/js/88st-shell.js?v=VIP4_20260213_04"></script>
+<script src="/assets/js/88st-analytics.js"></script>
+<link href="/assets/88st-theme.css?v=20260213_VIP4" rel="stylesheet"/>
+<link href="/assets/88st-tool-history.css?v=20260210_B5" rel="stylesheet"/>
+<script defer="" src="/assets/js/88st-history-hub.js?v=20260210_B5"></script>
+<link href="/assets/88st-shell.css?v=20260213_VIP4" rel="stylesheet"/>
+<script defer="" src="/assets/js/88st-shell.js?v=20260213_VIP4"></script>
 </head>
 <body>
 <!-- ✅ 사칭주의 팝업 (1일 1회) -->
