--- a/ipl/index.html
+++ b/ipl/index.html
@@ -58,7 +58,21 @@ body{
   box-shadow:0 10px 30px rgba(0,0,0,.35);
 }
 .notice-bar a{color:#000;text-decoration:none}
+#loader{
+  position:fixed; inset:0; z-index:2000;
+  background:
+    radial-gradient(900px 500px at 50% 30%, rgba(var(--accentRGB),.18), transparent 55%),
+    linear-gradient(180deg,#07070a,#0b0b0b);
+  display:flex; align-items:center; justify-content:center; flex-direction:column; gap:14px;
+}
+#loader .logoWrap{width:min(220px,60vw); aspect-ratio:1/1; display:flex; align-items:center; justify-content:center;
+  filter: drop-shadow(0 0 24px rgba(var(--accentRGB),.22));
+}
+#loader img{width:100%;height:100%;object-fit:contain; animation:pulse 1.4s ease-in-out infinite;}
+#loader .text{font-weight:900; letter-spacing:.6px; color:#e9e9e9; opacity:.85; font-size:13px;}
 @keyframes pulse{0%{transform:scale(1);opacity:.85}50%{transform:scale(1.03);opacity:1}100%{transform:scale(1);opacity:.85}}
+#loader.hide{opacity:0;pointer-events:none;transition:opacity .35s ease;}
+
 .scam-popup{
   position:fixed; inset:0; background:rgba(0,0,0,.75);
   display:none; align-items:center; justify-content:center; z-index:3000; padding:18px;
@@ -271,12 +285,173 @@ input:focus, select:focus, textarea:focus{
 /* links */
 a{ color:inherit; }
 </style>
-
-<section aria-label="관련 링크" class="rel-links">
-<h2>관련 링크</h2>
-
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BreadcrumbList",
+  "itemListElement": [
+    {
+      "@type": "ListItem",
+      "position": 1,
+      "name": "홈",
+      "item": "https://88st.cloud/"
+    },
+    {
+      "@type": "ListItem",
+      "position": 2,
+      "name": "IPL",
+      "item": "https://88st.cloud/ipl/"
+    }
+  ]
+}
+</script>
+<script src="/assets/js/88st-analytics.js"></script>
+<link href="/assets/88st-theme.css?v=20260213_VIP4" rel="stylesheet"/>
+<link href="/assets/88st-tool-history.css?v=20260210_B5" rel="stylesheet"/>
+<script defer="" src="/assets/js/88st-history-hub.js?v=20260210_B5"></script>
+<link href="/assets/88st-shell.css?v=20260213_VIP4" rel="stylesheet"/>
+<script defer="" src="/assets/js/88st-shell.js?v=20260213_VIP4"></script>
 </head>
 <body>
+<div id="loader">
+<div class="logoWrap"><img alt="88 로고 로딩" class="logoImg" src="/img/logo.png"/></div>
+<div class="text">Loading...</div>
+</div>
+<div class="scam-popup" id="scamPopup">
+<div class="scam-box">
+<h3>⚠️ 사칭 주의 안내</h3>
+<p>
+      88 커뮤니티 공식 관리자 텔레그램은<br/>
+<b>@UZU59</b> 단 하나입니다.<br/><br/>
+      그 외 계정은 사칭일 수 있으니<br/>
+      반드시 주의해 주세요.
+    </p>
+<div class="btn" onclick="closeScam()">확인</div>
+</div>
+</div>
+<div class="header">
+<div class="nav">
+<a href="../">메인</a>
+<a href="/analysis/">분석기</a>
+<a class="active" href="./">입플/보너스</a>
+<a href="../minigame/">동행 미니게임</a>
+<a href="../casino/">카지노</a>
+<a href="../slot/">슬롯</a>
+</div>
+<a aria-label="홈으로 이동" class="logoLink" href="../">
+<img alt="88 커뮤니티 로고" class="logoImg" src="/img/logo.png"/>
+</a>
+<div class="sub">
+<b>입금플러스(입플)·보너스·페이백</b> 조건/주의사항을 “고액 유저 기준”으로 정리했습니다.<br/>
+<small class="muted">※ 과장 없이, 환전조건/제한을 먼저 보는 방식으로 안내합니다.</small>
+</div>
+</div>
+<div class="wrap st-guide" role="main">
+<div class="card st-guide-hero">
+  <div class="st-guide-kicker">88ST.CLOUD · 가이드</div>
+  <h1 class="st-guide-title">입플/보너스 가이드</h1>
+  <p class="st-guide-desc">입금플러스(입플)·보너스·페이백 조건을 “롤링/제한/환전” 중심으로 깔끔하게 정리했습니다.</p>
+  <div class="st-guide-actions">
+    <a class="btn primary" href="/analysis/">분석기</a>
+    <a class="btn secondary" href="/bonus-checklist/">입플 체크리스트</a>
+    <a class="btn ghost" href="https://t.me/UZU59" target="_blank" rel="noopener">문의</a>
+  </div>
+</div>
+<div class="grid2">
+<div class="card">
+<div class="title"><span class="badge">CHECK</span>입플/보너스 체크리스트 (핵심 6)</div>
+<ul class="list">
+<li><b>롤링</b>: 몇 배 / 어떤 게임 포함인지</li>
+<li><b>게임 제한</b>: 슬롯만/라이브만/미니게임 제외 여부</li>
+<li><b>최대 보너스/상한</b>: 고액일수록 상한/제한 확인 필수</li>
+<li><b>환전 제한</b>: 특정 시간/횟수/금액 제한</li>
+<li><b>보너스 회수 조건</b>: 규정 위반 시 회수/몰수 조건</li>
+<li><b>입플 중복/연속</b>: 연속 참여 제한/쿨타임</li>
+</ul>
+<div class="callout text">
+<b>팁:</b> “받는 %”보다 <b>환전조건/제한</b>이 전환/만족을 좌우합니다.
+      </div>
+<div class="btnRow">
+<a class="btn blue" href="/analysis/">마진·EV 분석기 사용</a>
+<a class="btn gold" href="https://t.me/UZU59" rel="noopener" target="_blank">조건 문의(텔레그램)</a>
+</div>
+</div>
+<div class="card">
+<div class="title"><span class="badge">GUIDE</span>고액 유저 기준 “검증 포인트”</div>
+<div class="text">
+        고액 유저는 “이벤트가 크냐”보다 <b>정산 안정/대응/제한 투명성</b>을 봅니다.
+      </div>
+<div class="callout">
+<div class="kv"><div class="k">정산/환전 안정성</div><div class="v ok">최우선</div></div>
+<div class="kv"><div class="k">규정 투명(롤링/제한)</div><div class="v ok">필수</div></div>
+<div class="kv"><div class="k">고객 대응 속도</div><div class="v ok">필수</div></div>
+<div class="kv"><div class="k">과도한 상한/제한</div><div class="v bad">주의</div></div>
+</div>
+<div class="title" style="margin-top:12px;"><span class="badge">TIP</span>3줄 요약</div>
+<ul class="list">
+<li>“입플 크다” = “조건 빡세다”는 경우가 많음</li>
+<li>롤링/제한 확인 후 → 소액 테스트가 안정적</li>
+<li>사칭 계정은 <b>@UZU59</b> 외 전부 주의</li>
+</ul>
+</div>
+</div>
+<div class="card faq" style="margin-top:14px;">
+<div class="title"><span class="badge">FAQ</span>자주 묻는 질문 (입플/보너스)</div>
+<details open="">
+<summary>입플(입금플러스)은 무조건 좋은 건가요?</summary>
+<div class="a">아니요. <b>롤링/게임 제한/환전조건</b>이 강하면 체감 효율이 떨어질 수 있어요.</div>
+</details>
+<details>
+<summary>고액 유저는 어떤 조건을 제일 먼저 보나요?</summary>
+<div class="a"><b>정산 안정성</b>, 규정 투명성(제한/상한/롤링), 대응 속도를 우선 봅니다.</div>
+</details>
+<details>
+<summary>가입코드(추천코드)는 꼭 입력해야 하나요?</summary>
+<div class="a">대부분 업체는 <b>가입 시 최초 1회만</b> 입력 가능합니다. 미입력 시 혜택 적용이 어려울 수 있어요.</div>
+</details>
+<details>
+<summary>보너스 받으면 환전이 막히는 경우가 있나요?</summary>
+<div class="a">규정 위반, 제한 게임 이용, 조건 미충족 등으로 제한될 수 있어요. <b>조건 확인 후 참여</b>가 안전합니다.</div>
+</details>
+<details>
+<summary>문의는 어디로 하면 되나요?</summary>
+<div class="a">공식 문의 텔레그램은 <b>@UZU59</b> 단 하나입니다.</div>
+</details>
+</div>
+<div class="footer">
+    © 88 Community · 안내/검증 정보는 운영 상황에 따라 변경될 수 있습니다.
+  </div>
+</div>
+<script>
+/* 로더 닫기 */
+function hideLoader(){
+  const l = document.getElementById("loader");
+  if(!l) return;
+  l.classList.add("hide");
+  setTimeout(()=> l.remove(), 450);
+}
+window.addEventListener("load", hideLoader);
+setTimeout(hideLoader, 2500);
+
+/* 사칭주의 팝업(1일 1회) */
+(function(){
+  const key="scam_popup_date";
+  const today=new Date().toISOString().slice(0,10);
+  if(localStorage.getItem(key)!==today){
+    const el=document.getElementById("scamPopup");
+    if(el) el.style.display="flex";
+  }
+})();
+function closeScam(){
+  const today=new Date().toISOString().slice(0,10);
+  localStorage.setItem("scam_popup_date",today);
+  const el=document.getElementById("scamPopup");
+  if(el) el.style.display="none";
+}
+
+</script>
+<section aria-label="관련 링크" class="rel-links">
+<h2>관련 링크</h2>
 <div class="rel-grid">
 <a data-cta="rel_home" href="/">메인</a>
 <a data-cta="rel_odds" href="/#oddsAnalyzerSection">배당 구조 분석기</a>
