--- a/casino/landing-a_index.html
+++ b/casino/landing-a_index.html
@@ -129,12 +129,12 @@ a{ color:inherit; }
   ]
 }
 </script>
-<script src="/assets/js/88st-analytics.js"></script>
-<link href="/assets/88st-theme.css?v=20260213_VIP4" rel="stylesheet"/>
-</meta><link href="/assets/88st-tool-history.css?v=20260210_B5" rel="stylesheet"/>
-<script defer="" src="/assets/js/88st-history-hub.js?v=20260210_B5"></script>
-<link href="/assets/88st-shell.css?v=20260213_VIP4" rel="stylesheet"/>
-<script defer="" src="/assets/js/88st-shell.js?v=20260213_VIP4"></script>
+<script src="/assets/js/88st-analytics.js?v=VIP4_20260213_05"></script>
+<link href="/assets/88st-theme.css?v=VIP4_20260213_05" rel="stylesheet"/>
+</meta><link href="/assets/88st-tool-history.css?v=VIP4_20260213_05" rel="stylesheet"/>
+<script defer="" src="/assets/js/88st-history-hub.js?v=VIP4_20260213_05"></script>
+<link href="/assets/88st-shell.css?v=VIP4_20260213_05" rel="stylesheet"/>
+<script defer="" src="/assets/js/88st-shell.js?v=VIP4_20260213_05"></script>
 </head>
 <body>
 <div class="wrap">
