--- a/tool-casino/index.html
+++ b/tool-casino/index.html
@@ -17,17 +17,17 @@
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
 
 
-  <link rel="stylesheet" href="/assets/88st-theme.css?v=20260213_VIP4"/>
-  <link rel="stylesheet" href="/assets/88st-casino-strategies.css?v=20260211_v22_casino1"/>
-  <link rel="stylesheet" href="/assets/88st-shell.css?v=20260213_VIP4"/>
-  <script defer src="/assets/js/88st-shell.js?v=20260213_VIP4"></script>
-  <script defer src="/assets/js/88st-casino-strategies.js?v=20260211_v22_casino1"></script>
+  <link rel="stylesheet" href="/assets/88st-theme.css?v=VIP4_20260213_05"/>
+  <link rel="stylesheet" href="/assets/88st-casino-strategies.css?v=VIP4_20260213_05"/>
+  <link rel="stylesheet" href="/assets/88st-shell.css?v=VIP4_20260213_05"/>
+  <script defer src="/assets/js/88st-shell.js?v=VIP4_20260213_05"></script>
+  <script defer src="/assets/js/88st-casino-strategies.js?v=VIP4_20260213_05"></script>
   <!-- GA4 (Casino Stream) -->
   <script>
     window.SITE_CONFIG = window.SITE_CONFIG || {};
     window.SITE_CONFIG.GA4_ID = 'G-22QKSP9VGB';
   </script>
-  <script defer src='/assets/js/88st-analytics.js'></script>
+  <script defer src='/assets/js/88st-analytics.js?v=VIP4_20260213_05'></script>
 
 
   <script type="application/ld+json">
