--- a/tool-minigame/index.html
+++ b/tool-minigame/index.html
@@ -19,18 +19,18 @@
   <link rel='icon' href='/favicon.ico' type='image/x-icon'/>
   <link rel='shortcut icon' href='/favicon.ico' type='image/x-icon'/>
 
-  <link rel='stylesheet' href='/assets/88st-theme.css?v=20260213_VIP4'/>
-  <link rel='stylesheet' href='/assets/88st-minigame-analyzer.css?v=20260213_VIP4_mg2'/>
-  <link rel='stylesheet' href='/assets/88st-shell.css?v=20260213_VIP4'/>
-  <script defer src='/assets/js/88st-shell.js?v=20260213_VIP4'></script>
-  <script defer src='/assets/js/88st-minigame-analyzer.js?v=20260213_VIP4_mg2'></script>
+  <link rel='stylesheet' href='/assets/88st-theme.css?v=VIP4_20260213_05'/>
+  <link rel='stylesheet' href='/assets/88st-minigame-analyzer.css?v=VIP4_20260213_05'/>
+  <link rel='stylesheet' href='/assets/88st-shell.css?v=VIP4_20260213_05'/>
+  <script defer src='/assets/js/88st-shell.js?v=VIP4_20260213_05'></script>
+  <script defer src='/assets/js/88st-minigame-analyzer.js?v=VIP4_20260213_05'></script>
 
   <!-- GA4 (main stream) -->
   <script>
     window.SITE_CONFIG = window.SITE_CONFIG || {};
     window.SITE_CONFIG.GA4_ID = 'G-22QKSP9VGB';
   </script>
-  <script defer src='/assets/js/88st-analytics.js'></script>
+  <script defer src='/assets/js/88st-analytics.js?v=VIP4_20260213_05'></script>
 
   <script type='application/ld+json'>
   {
@@ -70,8 +70,20 @@
           </div>
         </div>
 
+        <div class='mg-row' style='margin-top:10px;'>
+          <div class='mg-field' style='flex:1; min-width:220px;'>
+            <label for='mgRecentN'>최근 구간(N)</label>
+            <select id='mgRecentN'>
+              <option value='3'>최근 3회</option>
+              <option value='4'>최근 4회</option>
+              <option value='5'>최근 5회</option>
+              <option value='6' selected>최근 6회</option>
+            </select>
+          </div>
+        </div>
+
         <div class='mg-note' style='margin-top:10px;'>
-          <b>배당</b>은 사이트에서 제공되는 값을 그대로 입력하세요. <b>최근 확률(%)</b>은 선택(빈칸 가능)입니다.
+          <b>배당</b>은 사이트에서 제공되는 값을 그대로 입력하세요. <b>최근 확률(%)</b>은 히스토리로 자동 채워집니다(직접 입력 불가).
         </div>
 
         <div style='margin-top:10px; overflow:auto;'>
@@ -81,17 +93,20 @@
                 <th style='width:120px;'>선택</th>
                 <th style='width:120px;'>배당</th>
                 <th style='width:150px;'>최근 확률(%)</th>
-                <th>비고</th>
+                
               </tr>
             </thead>
             <tbody id='mgInputBody'></tbody>
           </table>
         </div>
 
+        
         <div class='mg-row' style='margin-top:12px;'>
           <div class='mg-field' style='min-width:280px; flex:1.2;'>
             <label for='mgHistory'>최근 결과 붙여넣기 (선택)</label>
-            <textarea id='mgHistory' placeholder='예: 홀 짝 홀 홀 짝\n또는: 좌 우 좌 우\n(공백/줄바꿈/쉼표 구분)'></textarea>
+            <textarea id='mgHistory' placeholder='예: 홀 짝 홀 홀 짝
+또는: 좌 우 좌 우
+(공백/줄바꿈/쉼표 구분)'></textarea>
           </div>
           <div class='mg-field' style='min-width:200px; flex:.8;'>
             <label>히스토리 도구</label>
@@ -100,16 +115,16 @@
               <button class='mg-btn' id='mgClearHistory' type='button'>히스토리 비우기</button>
             </div>
             <div class='mg-note' style='margin-top:10px;'>
-              히스토리는 <b>현재 마켓의 선택값</b>만 인식합니다.
+              히스토리는 <b>현재 마켓의 선택값</b>만 인식합니다. (다른 값은 자동 무시)
             </div>
           </div>
         </div>
 
         <div class='mg-divider'></div>
 
+
         <div class='mg-btnrow'>
           <button class='mg-btn' id='mgReset' type='button'>초기화</button>
-          <button class='mg-btn' id='mgFillFair' type='button'>공정확률로 채우기</button>
           <button class='mg-btn' id='mgSave' type='button'>저장</button>
           <button class='mg-btn primary' id='mgAnalyze' type='button'>분석하기</button>
         </div>
@@ -143,8 +158,15 @@
           </table>
         </div>
 
+        <div class='mg-divider'></div>
+        <section class='mg-pro' aria-label='Pro 인사이트'>
+          <h3 style="margin:0 0 10px;">Pro 인사이트</h3>
+          <div class='mg-note' style='margin:-2px 0 12px;'>최근 결과(붙여넣기) 기반으로 <b>편향·연속·변동성</b>을 요약합니다. (예측 보장 아님)</div>
+          <div id='mgProInsights'></div>
+        </section>
+
         <div class='mg-note' style='margin-top:12px;'>
-          • EV% = (<b>내 확률 × 배당</b> − 1). 베팅금은 EV 금액 계산에만 사용됩니다.
+          • EV% = (<b>최근 확률(히스토리) × 배당</b> − 1). 베팅금은 EV 금액(원) 참고용입니다.
           <br/>
           • 이 도구는 계산을 돕기 위한 용도이며, 실제 결과는 변동성이 큽니다.
         </div>
@@ -161,15 +183,17 @@
     </div>
   </main>
 
+  <div id="mgToast" class="mg-toast" aria-live="polite" aria-atomic="true"></div>
+
 <script>
   // mgFallbackReload: if analyzer didn't render tabs (cache/script race), reload analyzer once.
   document.addEventListener('DOMContentLoaded', function(){
     setTimeout(function(){
       try{
         var host = document.getElementById('mgGameTabs');
-        if(host && host.children && host.children.length === 0){
+        if((!window.__MG_INIT_DONE) && host && host.children && host.children.length === 0){
           var s = document.createElement('script');
-          s.src = '/assets/js/88st-minigame-analyzer.js?v=20260213_VIP4_mg2';
+          s.src = '/assets/js/88st-minigame-analyzer.js?v=VIP4_20260213_05';
           s.defer = true;
           document.body.appendChild(s);
         }
