--- a/tool/ev/index.html
+++ b/tool/ev/index.html
@@ -214,15 +214,15 @@ a{ color:inherit; }
   ]
 }
 </script>
-<script src="/assets/js/88st-analytics.js"></script>
-<script defer="" src="/assets/js/vendor-teasers.js"></script>
-<link href="/assets/vendor-teasers.css?v=20260210_4" rel="stylesheet"/>
-<link href="/assets/88st-theme.css?v=20260213_VIP4" rel="stylesheet"/>
-<link href="/assets/88st-tool-history.css?v=20260210_B5" rel="stylesheet"/>
-<script defer="" src="/assets/js/88st-tool-history.js?v=20260210_B5"></script>
-<script defer="" src="/assets/js/88st-history-hub.js?v=20260210_B5"></script>
-<link href="/assets/88st-shell.css?v=20260213_VIP4" rel="stylesheet"/>
-<script defer="" src="/assets/js/88st-shell.js?v=20260213_VIP4"></script>
+<script src="/assets/js/88st-analytics.js?v=VIP4_20260213_05"></script>
+<script defer="" src="/assets/js/vendor-teasers.js?v=VIP4_20260213_05"></script>
+<link href="/assets/vendor-teasers.css?v=VIP4_20260213_05" rel="stylesheet"/>
+<link href="/assets/88st-theme.css?v=VIP4_20260213_05" rel="stylesheet"/>
+<link href="/assets/88st-tool-history.css?v=VIP4_20260213_05" rel="stylesheet"/>
+<script defer="" src="/assets/js/88st-tool-history.js?v=VIP4_20260213_05"></script>
+<script defer="" src="/assets/js/88st-history-hub.js?v=VIP4_20260213_05"></script>
+<link href="/assets/88st-shell.css?v=VIP4_20260213_05" rel="stylesheet"/>
+<script defer="" src="/assets/js/88st-shell.js?v=VIP4_20260213_05"></script>
 </head>
 <body>
 <div class="wrap">
