--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
 <meta content="width=device-width, initial-scale=1, viewport-fit=cover" name="viewport"/>
 <!-- 88 MAIN LUXE v13.1 (v12 기능 유지) -->
 <!-- ===== SEO 기본 세팅 ===== -->
-<title>88st.cloud | 스포츠 배당 분석기 · 마진/EV · 카지노 전략 · 미니게임 · 프라그마틱 슬롯 분석기 · 먹튀검증 안전놀이터</title>
-<meta content="88 — 스포츠 배당/마진(EV 포함) 분석기, 카지노 전략 분석기, 미니게임 분석기, 프라그마틱 슬롯(RTP·변동성) 분석기를 한 곳에서. 인증/보증 정보와 함께 빠르게 확인하세요." name="description">
-<meta name="keywords" content="스포츠 분석기, 스포츠 배당 분석기, 배당 마진 계산기, 오버라운드, EV 계산기, 공정배당, 보증사이트, 인증사이트, 먹튀검증, 카지노 전략 분석기, 미니게임 분석기, 프라그마틱 슬롯 분석기, 슬롯 RTP, 슬롯 변동성"/>
+<title>88st.cloud | 스포츠 배당 분석기 · 스포츠 배당 마진 계산기 · 먹튀검증 안전놀이터 ·안전한토토사이트</title>
+<meta content="88 — 스포츠 배당 분석기와 배당 마진(오버라운드) 계산기를 무료로 제공합니다. 분석기 사용 안내와 인증 놀이터 정보를 한 곳에서 확인하세요." name="description">
+<meta name="keywords" content="스포츠 분석기, 스포츠 배당 분석기, 배당 마진 계산기, 오버라운드, EV 계산기, 공정배당, 보증사이트, 인증사이트, 먹튀검증, 카지노 전략 분석기, 미니게임 분석기"/>
 <link href="https://88st.cloud/" rel="canonical"/>
 <meta content="index,follow" name="robots"/>
 <!-- SNS 공유 -->
 <meta content="website" property="og:type"/>
 <meta content="88 (팔팔커뮤니티)" property="og:site_name"/>
-<meta content="88 | 스포츠 배당·마진/EV · 카지노 전략 · 미니게임 · 슬롯 분석기" property="og:title"/>
-<meta content="무료 분석기(마진/EV/확률) + 슬롯 RTP/변동성 분석 + 인증 놀이터 안내" property="og:description"/>
+<meta content="88 | 스포츠 배당 분석기 · 배당 마진 계산기 · 인증 놀이터" property="og:title"/>
+<meta content="무료 분석기(마진/EV/확률) + 인증 놀이터 안내" property="og:description"/>
 <meta content="https://88st.cloud/" property="og:url"/>
 <link href="/favicon.ico" rel="icon" type="image/x-icon"/>
 <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
@@ -1774,13 +1774,13 @@ const INSIGHTS_BY_SPORT = {
   ]
 }
 </script>
-<link href="assets/mobile-polish.css?v=VIP4_20260213_07" rel="stylesheet"/>
-<script src="/assets/js/88st-analytics.js?v=VIP4_20260213_07"></script>
-<link href="/assets/88st-theme.css?v=VIP4_20260213_07" rel="stylesheet"/>
-<link href="/assets/88st-tool-history.css?v=VIP4_20260213_07" rel="stylesheet"/>
-<script defer="" src="/assets/js/88st-history-hub.js?v=VIP4_20260213_07"></script>
-</meta><link href="/assets/88st-shell.css?v=VIP4_20260213_07" rel="stylesheet"/>
-<script defer="" src="/assets/js/88st-shell.js?v=VIP4_20260213_07"></script>
+<link href="assets/mobile-polish.css?v=VIP4_20260213_06" rel="stylesheet"/>
+<script src="/assets/js/88st-analytics.js?v=VIP4_20260213_06"></script>
+<link href="/assets/88st-theme.css?v=VIP4_20260213_06" rel="stylesheet"/>
+<link href="/assets/88st-tool-history.css?v=VIP4_20260213_06" rel="stylesheet"/>
+<script defer="" src="/assets/js/88st-history-hub.js?v=VIP4_20260213_06"></script>
+</meta><link href="/assets/88st-shell.css?v=VIP4_20260213_06" rel="stylesheet"/>
+<script defer="" src="/assets/js/88st-shell.js?v=VIP4_20260213_06"></script>
 </head>
 <body>
 <h1 style="position:absolute;left:-9999px;">스포츠 배당 분석기와 배당 마진 계산기 | 88</h1>
@@ -1815,21 +1815,6 @@ const INSIGHTS_BY_SPORT = {
     </svg>
   </span>
   <span class="label">카지노 전략 분석기 이동<span class="sub">마틴·파롤리·달랑·오스카·피보·라부</span></span>
-</a>
-
-<a class="analyze-btn secondary" data-cta="go_slot_analyzer" href="/tool-slot/">
-  <span aria-hidden="true" class="icon">
-    <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-      <rect x="5" y="3" width="14" height="18" rx="2"/>
-      <path d="M8 7h2"/>
-      <path d="M12 7h2"/>
-      <path d="M16 7h0"/>
-      <path d="M8 11h2"/>
-      <path d="M12 11h2"/>
-      <path d="M8 15h8"/>
-    </svg>
-  </span>
-  <span class="label">프라그마틱 슬롯 분석기<span class="sub">RTP·변동성·세션 비용·뱅크롤</span></span>
 </a>
 
 <a class="analyze-btn secondary" data-cta="go_minigame_analyzer" href="/tool-minigame/">
@@ -1918,26 +1903,6 @@ const INSIGHTS_BY_SPORT = {
     <div class="why-cta"><a class="insight-btn primary" data-cta="why_to_minigame" href="/tool-minigame/">미니게임 분석기 열기 <span aria-hidden="true">→</span></a></div>
   </div>
 
-  <div class="why-card" aria-label="프라그마틱 슬롯 분석기">
-    <div class="why-kicker">프라그마틱 슬롯 분석기</div>
-    <div class="why-head"><b>RTP·변동성</b>을 숫자로 정리해, 세션 비용과 리스크를 빠르게 관리합니다.</div>
-    <ul class="why-list">
-      <li><b>총 베팅/기대 손실</b>을 즉시 계산해 “세션 비용”을 투명하게 확인</li>
-      <li><b>변동성 기준 권장 뱅크롤</b>과 <b>손절선</b>을 제안해 과몰입 방지</li>
-      <li><b>최근 저장/공유</b>로 게임별 설정을 빠르게 복원 (RTP 버전 메모 가능)</li>
-    </ul>
-
-    <div class="why-metrics">
-      <div class="why-metric"><div class="t">예시</div><div class="v">1,000원 × 300회</div><div class="s">총 300,000원</div></div>
-      <div class="why-metric"><div class="t">RTP 96%</div><div class="v">손실률 4%</div><div class="s">이론 기대손실 12,000원</div></div>
-      <div class="why-metric"><div class="t">고변동</div><div class="v">권장 뱅크롤</div><div class="s">베팅단위 × 380 (참고)</div></div>
-    </div>
-
-    <div class="why-note">이 도구는 ‘예측’이 아니라 <b>세션/자금관리</b>를 위한 참고용 분석기입니다.</div>
-    <div class="why-cta"><a class="insight-btn primary" data-cta="why_to_slot" href="/tool-slot/">슬롯 분석기 열기 <span aria-hidden="true">→</span></a></div>
-  </div>
-
-
 </div>
 
 </div>
@@ -2011,7 +1976,6 @@ const INSIGHTS_BY_SPORT = {
 <a href="/landing-d/">배당 흐름 분석</a>
 <a data-cta="seo_casino" href="/casino/">카지노 가이드</a>
 <a data-cta="seo_slot" href="/slot/">슬롯 가이드</a>
-<a data-cta="seo_tool_slot" href="/tool-slot/">프라그마틱 슬롯 분석기</a>
 <a data-cta="seo_minigame" href="/minigame/">미니게임 가이드</a>
 <a data-cta="seo_ipl" href="/ipl/">IPL 가이드</a>
 <a data-cta="seo_analysis" href="/analysis/">분석기 메인</a></div>
