--- a/tool-slot/index.html
+++ b/tool-slot/index.html
@@ -4,14 +4,14 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>프라그마틱 슬롯 분석기 | RTP·변동성·세션 비용 계산</title>
-<meta content="프라그마틱 슬롯(및 일반 슬롯) 플레이 전, RTP·변동성·베팅·스핀수로 총베팅/기대손실/권장 뱅크롤을 한 번에 계산합니다." name="description"/>
-<meta name="keywords" content="프라그마틱 슬롯 분석기, 슬롯 RTP, 슬롯 변동성, 슬롯 기대손실, 뱅크롤 계산, 슬롯 세션 관리"/>
+<title>슬롯 분석기 | RTP·변동성·세션 비용 계산</title>
+<meta content="슬롯 플레이 전, RTP·변동성·베팅·스핀수로 총베팅/기대손실/권장 뱅크롤을 한 번에 계산합니다." name="description"/>
+<meta name="keywords" content="슬롯 분석기, 슬롯 RTP, 슬롯 변동성, 슬롯 기대손실, 뱅크롤 계산, 슬롯 세션 관리"/>
 <link href="https://88st.cloud/tool-slot/" rel="canonical"/>
 <meta content="index,follow" name="robots"/>
 <meta content="website" property="og:type"/>
 <meta content="88 (팔팔커뮤니티)" property="og:site_name"/>
-<meta content="프라그마틱 슬롯 분석기 | RTP·변동성·세션 비용" property="og:title"/>
+<meta content="슬롯 분석기 | RTP·변동성·세션 비용" property="og:title"/>
 <meta content="RTP·변동성·베팅·스핀수로 총베팅/기대손실/권장 뱅크롤을 빠르게 계산합니다." property="og:description"/>
 <meta content="https://88st.cloud/tool-slot/" property="og:url"/>
 <style>
@@ -248,7 +248,7 @@ a{ color:inherit; }
     {
       "@type": "ListItem",
       "position": 2,
-      "name": "프라그마틱 슬롯 분석기",
+      "name": "슬롯 분석기",
       "item": "https://88st.cloud/tool-slot/"
     }
   ]
@@ -258,36 +258,24 @@ a{ color:inherit; }
 <script type="application/ld+json">{
   "@context": "https://schema.org",
   "@type": "SoftwareApplication",
-  "name": "프라그마틱 슬롯 분석기",
+  "name": "슬롯 분석기",
   "applicationCategory": "CalculatorApplication",
   "operatingSystem": "Web",
   "url": "https://88st.cloud/tool-slot/",
   "description": "RTP·변동성·베팅·스핀수로 총베팅/기대손실/권장 뱅크롤을 계산하는 웹 도구"
 }</script>
-<script src="/assets/js/88st-analytics.js?v=VIP4_20260213_07"></script>
-<script defer="" src="/assets/js/vendor-teasers.js?v=VIP4_20260213_07"></script>
-<link href="/assets/vendor-teasers.css?v=VIP4_20260213_07" rel="stylesheet"/>
-<link href="/assets/88st-theme.css?v=VIP4_20260213_07" rel="stylesheet"/>
-<link href="/assets/88st-tool-history.css?v=VIP4_20260213_07" rel="stylesheet"/>
-<script defer="" src="/assets/js/88st-tool-history.js?v=VIP4_20260213_07"></script>
-<script defer="" src="/assets/js/88st-history-hub.js?v=VIP4_20260213_07"></script>
-<link href="/assets/88st-shell.css?v=VIP4_20260213_07" rel="stylesheet"/>
-<script defer="" src="/assets/js/88st-shell.js?v=VIP4_20260213_07"></script>
+<script src="/assets/js/88st-analytics.js?v=VIP4_20260213_09"></script>
+<link href="/assets/88st-theme.css?v=VIP4_20260213_09" rel="stylesheet"/>
+<link href="/assets/88st-tool-history.css?v=VIP4_20260213_09" rel="stylesheet"/>
+<script defer="" src="/assets/js/88st-tool-history.js?v=VIP4_20260213_09"></script>
+<script defer="" src="/assets/js/88st-history-hub.js?v=VIP4_20260213_09"></script>
+<link href="/assets/88st-shell.css?v=VIP4_20260213_09" rel="stylesheet"/>
+<script defer="" src="/assets/js/88st-shell.js?v=VIP4_20260213_09"></script>
 </head>
 <body>
 <div class="wrap">
-<div class="topbar">
-<div class="brand"><span class="badge">88</span> 프라그마틱 슬롯 분석기</div>
-<div aria-label="바로가기" class="navlinks">
-<a href="/" rel="home">홈</a>
-<a href="/analysis/">스포츠 분석기</a>
-<a href="/tool-casino/">카지노 전략</a>
-<a href="/tool-minigame/">미니게임</a>
-<a href="/tool-slot/">슬롯 분석기</a>
-</div>
-</div>
 <div class="hero">
-<h1>프라그마틱 슬롯 분석기</h1>
+<h1>슬롯 분석기</h1>
 <p>RTP·변동성·베팅·스핀수로 <b>총베팅</b>, <b>기대 손실(이론)</b>, <b>권장 뱅크롤</b>을 한 번에 계산합니다.<br/><span class="small">※ 정보 제공/참고용 · 실제 결과는 변동성이 매우 큽니다.</span></p>
 </div>
 <div class="grid">
@@ -445,23 +433,6 @@ a{ color:inherit; }
 }
 </script>
 
-<div aria-label="인증 업체 빠른보기" class="vendor-teaser" data-vt-fixed="1,2,3,4" data-vt-pick="2" data-vt-pool="10,11,8,7" id="vendorTeaser">
-<div class="vt-head">
-<div>
-<div class="vt-title">인증 업체 빠른보기</div>
-<div class="vt-sub">고정 4 + 오늘의 추천 2(페이지별 자동 로테이션) · 카드 클릭 → 상세 혜택/공지 · 가입코드 미입력 시 혜택 불가</div>
-</div>
-<div class="badge">보증·인증</div>
-</div>
-<div class="vt-sec-title">필수 추천 TOP4 (고정)</div>
-<div class="vendor-grid" data-vt-grid="fixed"></div>
-<div class="vt-sec-title">오늘의 추천 TOP2 (자동 로테이션)</div>
-<div class="vendor-grid" data-vt-grid="rot"></div>
-<div class="vt-actions">
-<a data-cta="vendor_teaser_all" data-utm="1" href="/#vendorTop">전체 혜택/공지 보기</a>
-<a class="primary" data-cta="vendor_teaser_to_analysis" data-utm="1" href="/analysis/">분석기 바로가기</a>
-</div>
-</div>
 <div class="card" style="margin-top:12px;">
 <h2>자주 묻는 질문(FAQ)</h2>
 <div class="faq">
@@ -482,7 +453,7 @@ a{ color:inherit; }
 <div class="small" style="margin-top:8px; line-height:1.6;">권장 뱅크롤은 변동성에 따라 “베팅 단위의 배수”로 제안하는 참고 수치입니다. 손절선은 과몰입을 줄이기 위해 뱅크롤의 약 30%로 표시했습니다. 본인 성향에 맞게 더 보수적으로 잡는 것을 권장합니다.</div>
 </details>
 <details>
-<summary>프라그마틱 슬롯만 가능한가요?</summary>
+<summary>슬롯(제공사 제한)도 가능한가요?</summary>
 <div class="small" style="margin-top:8px; line-height:1.6;">아니요. RTP/변동성/베팅/스핀수만 알면 대부분의 슬롯에 동일하게 적용할 수 있습니다. (단, RTP 버전은 반드시 확인 권장)</div>
 </details>
 </div>
