--- a/tool-minigame/index.html
+++ b/tool-minigame/index.html
@@ -19,18 +19,18 @@
   <link rel='icon' href='/favicon.ico' type='image/x-icon'/>
   <link rel='shortcut icon' href='/favicon.ico' type='image/x-icon'/>
 
-  <link rel='stylesheet' href='/assets/88st-theme.css?v=VIP4_20260213_06'/>
-  <link rel='stylesheet' href='/assets/88st-minigame-analyzer.css?v=VIP4_20260213_06'/>
-  <link rel='stylesheet' href='/assets/88st-shell.css?v=VIP4_20260213_06'/>
-  <script defer src='/assets/js/88st-shell.js?v=VIP4_20260213_06'></script>
-  <script defer src='/assets/js/88st-minigame-analyzer.js?v=VIP4_20260213_06'></script>
+  <link rel='stylesheet' href='/assets/88st-theme.css?v=VIP4_20260213_09'/>
+  <link rel='stylesheet' href='/assets/88st-minigame-analyzer.css?v=VIP4_20260213_09'/>
+  <link rel='stylesheet' href='/assets/88st-shell.css?v=VIP4_20260213_09'/>
+  <script defer src='/assets/js/88st-shell.js?v=VIP4_20260213_09'></script>
+  <script defer src='/assets/js/88st-minigame-analyzer.js?v=VIP4_20260213_09'></script>
 
   <!-- GA4 (main stream) -->
   <script>
     window.SITE_CONFIG = window.SITE_CONFIG || {};
     window.SITE_CONFIG.GA4_ID = 'G-22QKSP9VGB';
   </script>
-  <script defer src='/assets/js/88st-analytics.js?v=VIP4_20260213_06'></script>
+  <script defer src='/assets/js/88st-analytics.js?v=VIP4_20260213_09'></script>
 
   <script type='application/ld+json'>
   {
@@ -101,7 +101,7 @@
         </div>
 
         
-        <div class='mg-row' style='margin-top:12px;'>
+        <div class='mg-row mg-history-row' style='margin-top:12px;'>
           <div class='mg-field' style='min-width:280px; flex:1.2;'>
             <label for='mgHistory'>최근 결과 붙여넣기 (선택)</label>
             <textarea id='mgHistory' placeholder='예: 홀 짝 홀 홀 짝
@@ -193,7 +193,7 @@
         var host = document.getElementById('mgGameTabs');
         if((!window.__MG_INIT_DONE) && host && host.children && host.children.length === 0){
           var s = document.createElement('script');
-          s.src = '/assets/js/88st-minigame-analyzer.js?v=VIP4_20260213_06';
+          s.src = '/assets/js/88st-minigame-analyzer.js?v=VIP4_20260213_09';
           s.defer = true;
           document.body.appendChild(s);
         }
